Test to see if spacing glitch is fixed

--- a/_shared/in-page/shared-styling.scss
+++ b/_shared/in-page/shared-styling.scss
@@ -39,7 +39,6 @@ body {
     width: 5%;
     height: 100%;
     font-weight: bold;
-    margin-right: 40px;
     color: black;
     text-decoration: none;
     text-wrap: nowrap;
